--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,7 +41,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeneroNegocio.cs" />
+    <Compile Include="IdiomaNegocio.cs" />
+    <Compile Include="LibroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioNegocio.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Datos\Datos.csproj">
+      <Project>{72f6dcb5-168b-4885-85be-21522de02727}</Project>
+      <Name>Datos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{c7652ef2-c406-4b82-a172-815633264ea2}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="scripts_db\Libreria_DB.sql" />
+    <Content Include="scripts_db\Procedimientos.sql" />
+    <Content Include="scripts_db\procedimientos usuarios.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
