--- a/libreria-web/libreria-web.csproj
+++ b/libreria-web/libreria-web.csproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\Perfiles\" />
     <Folder Include="Images\Portadas\" />
     <Folder Include="Models\" />
   </ItemGroup>
