Se centraliza la cadena de conexión sql en web.config

--- a/libreria-web/libreria-web.csproj
+++ b/libreria-web/libreria-web.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="Error.aspx" />
+    <Content Include="Estilos\background.css" />
     <Content Include="Favoritos.aspx" />
     <Content Include="FormularioAgregarLibro.aspx" />
     <Content Include="Global.asax" />
