--- a/libreria-web/Web.config
+++ b/libreria-web/Web.config
@@ -4,9 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<!--<appSettings>
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-	</appSettings>-->
+	<!--<connectionStrings>
+		<add name="cadenaConexion" connectionString="server=.\SQLEXPRESS; database=Libreria_DB; integrated security=true"/>
+	</connectionStrings>-->
+	<appSettings>
+		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=Libreria_DB; integrated security=true"/>
+		<!--<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />-->
+	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8" />
 		<httpRuntime targetFramework="4.8" />
